syntax = "proto3";

package docs;

service BlinkGreetingService {
  rpc hello (HelloRequest) returns (HelloResponse);
}

message GreetingData {
  string greeting = 1;
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  int32 status = 1;
  int32 code = 2;
  string message = 3;
  GreetingData data = 4;
}